--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,7 @@
 <resources>
 
-
+    <style name="FontStyleBigBlack">
+        <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
